@@ -38,13 +38,13 @@
     <url>http://www.revolsys.com/</url>
   </organization>
 
-  
+
 
   <issueManagement>
     <system>GitHub</system>
     <url>https://github.com/revolsys/com.revolsys.open/issues</url>
-  </issueManagement><modules>
-    <module>com.revolsys.open.javac</module>
+  </issueManagement>
+  <modules>
     <module>com.revolsys.open.core</module>
     <module>com.revolsys.open.testapi</module>
     <module>com.revolsys.open.doclet</module>
@@ -58,18 +58,45 @@
     <module>com.revolsys.open.web</module>
     <module>war-overlay</module>
     <module>com.revolsys.open.coordinatesystems</module>
-    <!-- <module>com.revolsys.open.java10</module> -->
   </modules>
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.0.0-M2</version>
+        <executions>
+          <execution>
+            <id>enforce-maven</id>
+            <goals>
+              <goal>enforce</goal>
+            </goals>
+            <configuration>
+              <rules>
+                <requireMavenVersion>
+                  <version>3.5.0</version>
+                </requireMavenVersion>
+                <requireJavaVersion>
+                  <version>11</version>
+                </requireJavaVersion>
+              </rules>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-clean-plugin</artifactId>
+        <version>3.1.0</version>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <release>11</release>
           <debug>true</debug>
           <parameters>true</parameters>
           <compilerArgument>-parameters</compilerArgument>
@@ -96,7 +123,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.1</version>
         <configuration>
           <archive>
             <manifestEntries>
@@ -114,7 +141,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.3</version>
+        <version>3.0.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -157,7 +184,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.5</version>
+        <version>1.6</version>
         <executions>
           <execution>
             <id>sign-artifacts</id>
@@ -171,6 +198,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
+        <version>2.5.3</version>
         <configuration>
           <goals>deploy</goals>
           <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -182,7 +210,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-install-plugin</artifactId>
-        <version>2.3.1</version>
+        <version>3.0.0-M1</version>
         <configuration>
           <createChecksum>true</createChecksum>
         </configuration>
@@ -190,16 +218,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
-        <version>2.8.2</version>
+        <version>3.0.0-M1</version>
       </plugin>
-      <!-- <plugin> <groupId>org.sonatype.plugins</groupId> <artifactId>nexus-staging-maven-plugin</artifactId> 
-        <version>1.6.3</version> <extensions>true</extensions> <configuration> <serverId>sonatype-nexus-staging</serverId> 
-        <nexusUrl>https://oss.sonatype.org/</nexusUrl> <autoReleaseAfterClose>true</autoReleaseAfterClose> 
-        </configuration> </plugin> -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>license-maven-plugin</artifactId>
-        <version>1.8</version>
+        <version>1.16</version>
         <!-- <executions> <execution> <id>aggregate-add-third-party</id> 
           <inherited>true</inherited> <phase>install</phase> <configuration> <force>true</force> 
           <outputDirectory>src/license/</outputDirectory> <useMissingFile>true</useMissingFile> 
@@ -221,8 +245,18 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M2</version>
+        <configuration>
+          <argLine>
+            --illegal-access=permit
+          </argLine>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <version>3.4</version>
+        <version>3.7.1</version>
         <executions>
           <execution>
             <id>attach-descriptor</id>
@@ -235,7 +269,7 @@
           <dependency>
             <groupId>org.apache.maven.doxia</groupId>
             <artifactId>doxia-module-markdown</artifactId>
-            <version>1.6</version>
+            <version>1.8</version>
           </dependency>
           <dependency>
             <groupId>lt.velykis.maven.skins</groupId>
@@ -250,14 +284,19 @@
           <dependency>
             <groupId>net.trajano.wagon</groupId>
             <artifactId>wagon-git</artifactId>
-            <version>2.0.2</version>
+            <version>2.0.4</version>
           </dependency>
         </dependencies>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>2.7</version>
+        <configuration>
+          <generateBackupPoms>false</generateBackupPoms>
+        </configuration>
+      </plugin>
     </plugins>
-    <!-- <extensions> <extension> <groupId>org.apache.maven.wagon</groupId> 
-      <artifactId>wagon-ssh-external</artifactId> <version>2.10</version> </extension> 
-      </extensions> -->
   </build>
 
   <reporting>
@@ -265,7 +304,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>2.8</version>
+        <version>3.0.0</version>
         <configuration>
           <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
           <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
@@ -326,7 +365,7 @@
       <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
+        <version>4.0.1</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -511,46 +550,21 @@
     </site>
   </distributionManagement>
 
-  <profiles>
-    <profile>
-      <id>sun-tools-win</id>
-      <activation>
-        <file>
-          <exists>C:\Program Files\Java\jdk1.8.0\lib\tools.jar</exists>
-        </file>
-      </activation>
-      <properties>
-        <com.sun.tools.path>C:\Program Files\Java\jdk1.8.0\lib\tools.jar</com.sun.tools.path>
-      </properties>
-    </profile>
-    <profile>
-      <id>sun-tools-mac</id>
-      <activation>
-        <file>
-          <exists>/Library/Java/JavaVirtualMachines/jdk1.8.0.jdk/Contents/Home/lib/tools.jar</exists>
-        </file>
-      </activation>
-      <properties>
-        <com.sun.tools.path>/Library/Java/JavaVirtualMachines/jdk1.8.0.jdk/Contents/Home/lib/tools.jar</com.sun.tools.path>
-      </properties>
-    </profile>
-  </profiles>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <com.sun.tools.path>${java.home}/../lib/tools.jar</com.sun.tools.path>
+    <jaxb.version>2.2.11</jaxb.version>
     <org.gdal.version>2.3.1-1</org.gdal.version>
     <org.slf4j.version>1.7.21</org.slf4j.version>
     <org.springframework.version>4.2.5.RELEASE</org.springframework.version>
     <org.springframework.security.version>4.0.4.RELEASE</org.springframework.security.version>
-    <org.codehaus.groovy.version>2.4.5</org.codehaus.groovy.version>
-    <org.docx4java.version>6.0.1</org.docx4java.version>
+    <org.codehaus.groovy.version>2.4.16</org.codehaus.groovy.version>
+    <org.docx4java.version>6.1.0</org.docx4java.version>
     <junit.version>4.12</junit.version>
+    <org.apache.xmlgraphics.batik.version>1.10</org.apache.xmlgraphics.batik.version>
     <junit.jupiter.version>5.2.0</junit.jupiter.version>
     <junit.vintage.version>5.2.0</junit.vintage.version>
     <junit.platform.version>1.2.0</junit.platform.version>
     <gpg.skip>true</gpg.skip>
-    <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
     <github.global.server>github</github.global.server>
     <gitHubUser>revolsys</gitHubUser>
     <gitHubProject>com.revolsys.open</gitHubProject>
